fixed start now button on iphone bug

--- a/src/HomeComponents/HomePage.css
+++ b/src/HomeComponents/HomePage.css
@@ -373,7 +373,7 @@
   }
 
   #start-now-btn {
-    width: 130px;
+    width: 150px;
     height: 40px;
     font-size: 16px;
     border: 1px solid #E9482B;
